config/k8s/birdsquawk-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdsquawk-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: birdsquawk
  template:
    metadata:
      labels:
        app: birdsquawk
    spec:
      containers:
        - name: birdsquawk
          image: ashishkarki007/birdsquawk:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: birdsquawk-service
spec:
  selector:
    app: birdsquawk
  ports:
    - name: birdsquawk
      protocol: TCP
      port: 5050
      targetPort: 5050
# spec:
#   containers:
#     - name: birdsquawk
#       image: ak007/birdsquawks-service:0.0.1
