config/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: birdsquawk-app.dev
      http:
        paths:
          - path: /api/v1/birdsquawk/get
            pathType: Prefix
            backend:
              service:
                name: birdsquawk-service
                port:
                  number: 5050
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 3000
